--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "themes/newsroom"]
 	path = themes/newsroom
 	url = https://github.com/onweru/newsroom.git
+[submodule "public"]
+	path = public
+	url = https://github.com/kenny-reyes/kenny-reyes.github.io.git
+	branch = main
+
